# injective-bank-contracts

./: Cargo.toml
artifacts/: checksums.txt  checksums_intermediate.txt  injective_bank.wasm
contracts/: Cargo.toml
contracts/src/: contract.rs  error.rs  msg.rs  state.rs
schema/: injective-bank.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_get_collection_data.json  response_to_get_offers.json
